--- a/style.css
+++ b/style.css
@@ -323,6 +323,13 @@ body {
   border-radius: 8px;
   list-style: none;
 }
+.form-container {
+
+}
+
+.primary-text2 {
+
+}
 
 .support-text2 {
   font-weight: 600px;
@@ -336,45 +343,7 @@ body {
 }
 
 .form {
-  margin-top: 120px;
-}
-
-.form input {
-  width: 327px;
-  height: 48px;
-  border-radius: 4px;
-  border: 1px solid #d0d9d4;
-  background: #fff;
-  margin-left: 20px;
-  color: #6b778c;
-  font-size: 15px;
-  font-weight: 400;
-  text-align: start;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.Enter {
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-.Enter input {
-  width: 327px;
-  height: 114px;
-  border-radius: 4px;
-  border: 1px solid #60c095;
-  background: #fff;
-  color: #6b778c;
-  font-size: 15px;
-  font-weight: 400;
-  padding: 10px 50px 70px 10px;
-}
-
-.project-button-3 {
-  width: 129px;
-  height: 48px;
-  margin-left: 120px;
+  
 }
 
 .supporting-text {
