--- a/style.css
+++ b/style.css
@@ -66,17 +66,17 @@ body {
 }
 
 .details {
-  animation: 1s 3 slidein;
+  animation: 1s 2 slidein;
 }
 
 @keyframes slidein {
   from {
-    margin-left: 0%;
+    margin: 0%;
     width: 100%;
   }
   to {
     margin: 100%;
-    width: 200%;
+    width: 300%;
   }
 }
 
@@ -111,6 +111,7 @@ body {
   font-size: 20px;
   line-height: 28px;
   color: #28352f;
+  transform: rotate(45deg) translate(100px);
 }
 
 .icone-clos {
