--- a/style.css
+++ b/style.css
@@ -16,6 +16,38 @@ body {
   flex-direction: column;
 }
 
+
+.arrow {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.social-media,
+.social-media2 li {
+  list-style: none;
+}
+
+.logo {
+  padding: 10px 12px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 28px;
+  color: #28352f;
+}
+
+.icone-clos {
+  width: 18px;
+  height: 12px;
+  position: absolute;
+  top: 6px;
+  left: 900px;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -30,6 +62,32 @@ body {
 
 #menu-list {
   display: none;
+  list-style: none;
+}
+
+#menu-list a {
+  text-decoration: none;
+  padding: 25px 30px;
+  display: block;
+}
+
+#menu.show {
+  display: block;
+  background: white;
+  width: 100%;
+  text-align: left;
+  padding-top: 40px;
+  padding-left: 20px;
+  position: absolute;
+  top: 0;
+  height: 90vh;
+  box-shadow: 0 48px 48px rgb(37 47 137 / 8%);
+  left: 0;
+  border-radius: 0 0 50px 50px;
+}
+
+.big-icon {
+  font-size: 30px;
 }
 
 .content {
@@ -86,38 +144,6 @@ body {
   gap: 10px;
   margin-top: 20px;
   padding-top: 20px;
-}
-
-.arrow {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 30px;
-}
-
-.social-media,
-.social-media2 li {
-  list-style: none;
-}
-
-.logo {
-  padding: 10px 12px;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 28px;
-  color: #28352f;
-  transform: rotate(45deg) translate(100px);
-}
-
-.icone-clos {
-  width: 18px;
-  height: 12px;
-  position: absolute;
-  top: 6px;
-  left: 900px;
 }
 
 .headline {
@@ -365,7 +391,7 @@ body {
   }
 
   .logo,
-  .hamburger-menu {
+  .hamburger {
     display: none;
   }
 
@@ -392,7 +418,7 @@ body {
   #menu-list a:focus {
     background: black;
     color: #fff;
-    rotate: 180deg;
+    rotate: 360deg;
     transition-delay: o0.5s;
   }
 
