Add mobile and desktop project info card

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
   display: grid;
   justify-content: center;
   align-items: center;
-  padding-top: 10px;
+  padding: 30px;
 }
 
 .work {
@@ -182,6 +182,8 @@ body {
   border-radius: 8px;
   margin: 0 32px;
   margin-top: 50px;
+  max-width: 369px;
+  min-width: 327px;
 }
 
 .Text {
@@ -189,14 +191,17 @@ body {
   align-items: center;
   padding: 16px;
   gap: 16px;
-  width: 308px;
-  height: 222px;
   left: calc(50% - 327px / 2);
   border-radius: 8px;
-  margin-top: 250px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-top: -8px;
+}
+
+.project-image {
+  width: 100%;
+  min-height: 222px;
 }
 
 .project-title {
@@ -223,6 +228,97 @@ body {
   border-radius: 5px;
   list-style: none;
 }
+
+/* ====Project Info Card Dtart */
+.project-card-bg {
+  width: 100%;
+  height: 100vh;
+  background: #c1c7d0;
+  padding: 20px;
+  display: grid;
+  position: fixed;
+  overscroll-behavior: contain;
+  overflow: auto;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  animation: ease-in-out 1s;
+}
+
+.project-card {
+  padding: 16px;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
+  background: white;
+  align-self: center;
+  position: relative;
+  min-height: 855px;
+  margin: auto;
+}
+
+.modal-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px 10px 0 0;
+  transition: all 1s;
+}
+
+.project-modal-image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.close-project {
+  font-size: 25px;
+  color: #67798e;
+  position: absolute;
+  left: 87%;
+  top: 4%;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.project-card-heading {
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
+}
+
+.flex-list {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 10px;
+  list-style: none;
+  align-items: center;
+  text-align: center;
+  margin: 16px 0 29px 0;
+  white-space: nowrap;
+}
+
+.project-description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: left;
+  margin-bottom: 16px;
+  margin-top: -10px;
+}
+
+.project-buttons {
+  display: flex;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  position: absolute;
+  top: 93%;
+  left: 10%;
+  right: 10%;
+}
+
+/* ====Project Info Card end==== */
 
 .project-button {
   font-weight: 500;
@@ -457,6 +553,67 @@ body {
   #work-section {
     grid-template-columns: repeat(3, auto);
   }
+
+  /* ====Projects Info Desktop==== */
+  .project-card {
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    max-width: 920px;
+    max-height: 1083px;
+  }
+
+  .close-project {
+    align-self: flex-end;
+    background: #ebecf0;
+    align-items: center;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 8px;
+    color: #67798e;
+    font-size: 20px;
+    top: 2%;
+    left: 93%;
+
+    /* cursor: pointer; */
+  }
+
+  .project-modal-image {
+    padding-top: 50px;
+  }
+
+  .heading-infos {
+    margin-top: 10px;
+  }
+
+  .project-card-bg {
+    width: 100%;
+    height: 100vh;
+    background: rgba(193, 199, 208, 0.5);
+    backdrop-filter: blur(8px);
+    padding: 122px 0 260px 0;
+    position: fixed;
+    overflow: auto;
+    z-index: 100;
+    top: 0;
+  }
+
+  .project-info {
+    display: grid;
+    grid-template-columns: auto auto;
+    gap: 10px;
+  }
+
+  .project-buttons {
+    position: inherit;
+  }
+
+  .project-button {
+    margin-top: 20px;
+    border-radius: 8px;
+  }
+
+  /* ====Projects Info Desktop end==== */
 
   /* About me section */
   .about-me {
