--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@ a {
 
   #menu-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     list-style: none;
     width: 100%;
     font-weight: 600;
